Fix issue with all course setup checkboxes. CSS adjustment. Fixing CP theme alignment issue. Fixing CP JS error.

--- a/css/admin_coursepress_page_course_details.css
+++ b/css/admin_coursepress_page_course_details.css
@@ -1941,7 +1941,7 @@ label.bold-label{
 .course-section .course-form label span {
     font-size: 0.9em;
     font-weight: normal;
-    display: block;
+    display: inline-block;
     margin: 15px 0;
 }
 
